--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
     "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -16,9 +19,13 @@
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-calendly": "^4.4.0",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^3.4.0",
+    "tsparticles-engine": "^2.12.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
