--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-calendly": "^4.4.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
