--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@uidotdev/usehooks": "^2.4.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
